# ambient-wifi-network

./: .env  CMakeLists.txt  Network-Design.md  README.md
Controller CMake (update) controller/: CMakeLists.txt
K8s/: deployment.yaml
Opener/: captiv.sh
citywide-montebello-wifi/docs/proposal/: backhaul_design.md  budget_overview.md  coverage_plan.md  deployment_phases.md  executive_summary.md  maintenance_plan.md  rf_architecture.md  security_model.md
controller/interference/: CMakeLists.txt  InterferenceClassifier.cpp  InterferenceClassifier.h
controller/optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
controller/orchestrator/: CMakeLists.txt  Orchestrator.cpp  Orchestrator.h
controller/spectrum/: CMakeLists.txt  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
controller/telemetry/: CMakeLists.txt  TelemetryEngine.cpp  TelemetryEngine.h
infra/: docker-compose.edge.yml
src/: main.ccp
src/Services/: StripeService.cpp
src/auth/: AuthService.cpp  AuthService.h
src/captive/: CaptivePortal.cpp  CaptivePortal.h
src/core/: Config.cpp  Config.h  Logger.cpp  Logger.h
src/edge/: Gateway.cpp  Gateway.h  main.cpp
src/edge/rf/Wifi6/: README.MD  main.cpp  rf_frontend.h  rf_frontend6.cpp
src/edge/rf/wifi5/: Readme.md  rf_frontend.cpp  rf_frontend.h
src/net/: HttpServer.ccp  HttpServer.h  Router.ccp  Router.h  TreadPool.ccp
src/security/: Jwt.cpp  Jwt.h  TLS.ccp
src/server/: HttpServer.cpp  HttpServer.h
src/utils/: EnvLoader.cpp  EnvLoader.h
